matrix/password-reset/password-reset.pod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: synapse-password-reset
    name: synapse-password-reset
  name: synapse-password-reset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse-password-reset
      name: synapse-password-reset
  template:
    metadata:
      annotations:
        app: synapse-password-reset
      labels:
        app: synapse-password-reset
        name: synapse-password-reset
    spec:
      containers:
      - name: synapse-br
        image: euank/synapse-password-reset:a7da248
        args: ["--db", "postgres://$(SYNAPSE_DB_USER):$(SYNAPSE_DB_PASS)@stolon-proxy-service/synapse", "--pepper", "$(SYNAPSE_PEPPER)", "--token-dir", "tokens"]
        # TODO, this has some implicit disk (token-dir), maybe that should be
        # on nfs or maybe I should just fix the program itself..
