matrix/password-reset/synapse-password-reset.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-password-reset
  labels:
    app: synapse-password-reset
spec:
  type: NodePort
  selector:
    app: synapse-pass-reset
  ports:
  - name: http
    port: 80
    targetPort: 6767
