matrix/password-reset/password-reset.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wobscale-matrix-pw-reset
  annotations:
    stable.k8s.psg.io/kcm.enabled: "true"
    stable.k8s.psg.io/kcm.provider: "cloudflare"
    stable.k8s.psg.io/kcm.email: "admin@wobscale.website"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - wobscale.chat
    secretName: wobscale.chat
  rules:
  - host: wobscale.chat
    http:
      paths:
      - path: "/password/reset"
        backend:
          serviceName: synapse-password-reset
          servicePort: 80
